2016-04-11 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented metering and monitoring controls.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a statistics display.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassmonitor/glassmonitor.cpp' that caused
	the section divider to be drawn only between the first two monitor
	strips.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a summary alarm indicator.
2016-04-28 Fred Gleason <fredg@paravelsystems.com>
	* Added an e-mail alert subsystem.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make rpm' target.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added icons in 'icons/'.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a rule to 'glassmonitor.spec.in' to install a sample
	configuration file.